# kv

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
docker/: entrypoint.sh
docs/: docker.md  envs.md  health.md  install.md  launcher.md  lockfile.md  update.md
src/: cli.rs  env.rs  health.rs  install.rs  launcher.rs  lockfile.rs  main.rs  paths.rs  update.rs
todo/tests/: health.md  install.md  launcher.md  lockfile.md  update.md
