[package]
name = "kv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.35"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
inquire = "0.9.4"
owo-colors = { version = "4", features = ["supports-colors"] }

[dev-dependencies]
serial_test = "3"
tempfile = "3"
