[package]
name = "kv"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.35"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
directories = "6.0.0"
inquire = "0.9.4"
owo-colors = { version = "4", features = ["supports-colors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
serial_test = "3"
tempfile = "3"
