[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "kv"
description = "CLI tool to launch KoalaVim"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [{ name = "KoalaVim" }]
keywords = ["neovim", "koalavim", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Rust",
    "Topic :: Text Editors",
    "Topic :: Utilities",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/KoalaVim/kv"
Repository = "https://github.com/KoalaVim/kv"
Issues = "https://github.com/KoalaVim/kv/issues"

[tool.maturin]
bindings = "bin"
strip = true
